# Portfolio

./: .gitignore  CLAUDE.md  README.md  builtin_austin.html  pyproject.toml  skills-lock.json
.agents/skills/git-commit/: SKILL.md
.agents/skills/job-apply/: SKILL.md
.agents/skills/job-track/: SKILL.md
.github/workflows/: job_cron.yml  update_applied.yml
docs/: dashboard.html  experiment-design.md  index.html  job_aggregator.db
learning/HandsOnDataScience/: 02_end_to_end_machine_learning_project.ipynb
openspec/changes/complete-walkability-prediction/: design.md  proposal.md  tasks.md
openspec/changes/complete-walkability-prediction/specs/ai-chat/: spec.md
openspec/changes/complete-walkability-prediction/specs/data-acquisition/: spec.md
openspec/changes/complete-walkability-prediction/specs/explainability/: spec.md
openspec/changes/complete-walkability-prediction/specs/feature-engineering/: spec.md
openspec/changes/complete-walkability-prediction/specs/interactive-map/: spec.md
openspec/changes/complete-walkability-prediction/specs/walkability-model/: spec.md
projects/Apps/habit-tracker-2026/: app.json  package-lock.json  package.json
projects/JobApplicationAgent/: .env.example  .gitignore  pdf_generator.py  pyproject.toml  tracker.py
projects/JobApplicationAgent/templates/: cover_letter.html  resume.html
projects/JobSearchAggregator/: .gitignore  README.md  job_aggregator.db  main.py  pyproject.toml  requirements.txt  resume.txt  scraper.py
projects/TaskManagementApp/: .gitignore  _verify.py  firebase_config.py  google_calendar.py  main.py  pyproject.toml  shopping_list.py
projects/TaskManagementApp/openspec/: config.yaml
projects/TaskManagementApp/openspec/changes/archive/2026-03-29-initial-app-setup/: design.md  proposal.md  tasks.md
projects/TaskManagementApp/openspec/changes/archive/2026-03-29-initial-app-setup/specs/initial-setup/: spec.md
projects/TaskManagementApp/openspec/changes/archive/2026-04-08-phase-1-shopping-list/: .openspec.yaml  design.md  proposal.md  tasks.md
projects/TaskManagementApp/openspec/changes/initial-app-setup/: design.md  proposal.md  tasks.md
projects/TaskManagementApp/openspec/changes/initial-app-setup/specs/initial-setup/: spec.md
projects/TaskManagementApp/openspec/changes/phase-1-shopping-list/: proposal.md  tasks.md
projects/TaskManagementApp/openspec/specs/firebase-sync/: spec.md
projects/TaskManagementApp/openspec/specs/pwa-deployment/: spec.md
projects/TaskManagementApp/openspec/specs/shopping-list/: spec.md
projects/TravelPhotoMap/: requirements.txt
projects/TravelPhotoMap/data/: locations.csv  travel_map.db
projects/TravelPhotoMap/src/: app.py  db_utils.py
projects/UrbanMobilityNLP/: .env.example  .gitignore  README.md  pyproject.toml
projects/UrbanMobilityNLP/dashboard/: app.py
projects/UrbanMobilityNLP/src/: cities.py  collect.py  models.py  pipeline.py
projects/WalkabilityPrediction/: Walkability_Modeling.ipynb  chat.py  main.py  pyproject.toml
projects/my-freshrss/: docker-compose.yml
