[project]
name = "jobsearchaggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "groq>=0.13.0",
    "python-dotenv>=1.2.1",
]
