[project]
name = "urbanmobilitynlp"
version = "0.1.0"
description = "NLP-powered Reddit discourse analyzer for urban mobility subreddits"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Data collection
    "praw>=7.8.1",
    "python-dotenv>=1.2.1",

    # Data processing
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "pyarrow>=19.0.1",

    # NLP pipeline
    "sentence-transformers>=3.4.1",
    "bertopic>=0.17.0",
    "transformers>=4.51.3",
    "torch>=2.7.0",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    "scikit-learn>=1.6.1",

    # Dashboard
    "marimo>=0.13.6",
    "plotly>=6.1.1",

    # Utility
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
