[project]
name = "walkabilityprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.5",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "osmnx>=2.0.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "shap>=0.49.1",
    "xgboost>=3.1.1",
]
